# cna-examples

./: .gitignore  CMakeLists.txt  README.md  plan.md
Content/: menufont.cnj
Content/MediaDemo/: unsupported.opus
cmake/: ExamplesHelpers.cmake
src/: CnaExamplesGame.hpp  Program.cpp
src/Demos/: DemoScreen.hpp
src/Demos/Audio/: AudioDemoHelpers.hpp
src/Demos/Audio/Audio3D/: Apply3DScreen.hpp  DopplerDistanceScreen.hpp
src/Demos/Audio/DynamicSoundEffectInstance/: StreamingSineWaveScreen.hpp
src/Demos/Audio/Microphone/: MicrophoneCaptureScreen.hpp  MicrophoneEnumerationScreen.hpp
src/Demos/Audio/SoundEffect/: MasterVolumeAndSettingsScreen.hpp  PlayToneScreen.hpp
src/Demos/Audio/SoundEffectInstance/: LoopingScreen.hpp  PlaybackControlScreen.hpp  VolumePitchPanScreen.hpp
src/Demos/Devices/Camera/: CameraCaptureScreen.hpp
src/Demos/Devices/DesktopIntegration/: ClipboardScreen.hpp  FileDialogScreen.hpp  MessageBoxScreen.hpp  SystemTrayScreen.hpp  UrlLauncherScreen.hpp
src/Demos/Devices/Power/: PowerInfoScreen.hpp
src/Demos/Devices/Sensors/: AccelerometerScreen.hpp  CompassScreen.hpp  GyroscopeScreen.hpp  MotionScreen.hpp
src/Demos/Devices/SystemAndDisplay/: DisplayInfoScreen.hpp  LocaleScreen.hpp  SystemInfoScreen.hpp
src/Demos/Devices/Vibration/: VibrateScreen.hpp
src/Demos/Graphics2D/: TextureDemoHelpers.hpp
src/Demos/Graphics2D/BeginEndState/: BlendStateLeakScreen.hpp  DrawOutsideBeginThrowsScreen.hpp  NestedBeginThrowsScreen.hpp  TransformMatrixScreen.hpp
src/Demos/Graphics2D/BlendState/: BlendModeComparisonScreen.hpp  PremultipliedAlphaGotchaScreen.hpp
src/Demos/Graphics2D/DisposeSafety/: DisposeWhileBoundThrowsScreen.hpp
src/Demos/Graphics2D/DrawString/: BasicTextScreen.hpp  FlippedTextScreen.hpp  StringBuilderScreen.hpp  TransformedTextScreen.hpp
src/Demos/Graphics2D/DrawingBasics/: DestinationRectangleScreen.hpp  PositionDrawScreen.hpp  RotationOriginScreen.hpp  ScaleAndEffectsScreen.hpp  SourceRectangleScreen.hpp
src/Demos/Graphics3D/: Geometry3DHelpers.hpp
src/Demos/Media/: MediaDemoHelpers.hpp
src/Demos/Net/: NetDemoHelpers.hpp
src/GameStateManagement/: GameScreen.hpp  InputState.hpp  MenuEntry.hpp  MenuScreen.hpp  ScreenManager.hpp
src/Navigation/: AreaCatalog.hpp  AreaScreen.hpp  CategoryScreen.hpp  GroupScreen.hpp  HomeScreen.hpp
tools/: gen_menu_font.py
(+127 files in other folders)
